# projectcontext

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml  quickstart.sh
src/agent_memory/: SYSTEM_PROMPT.md  __init__.py  server.py
src/agentmemory/: SYSTEM_PROMPT.md  __init__.py  agenda.py  database.py  memory.py  server.py
src/projectcontext/: SYSTEM_PROMPT.md  agenda.py  database.py  memory.py  server.py
tests/: test_agenda.py  test_category_search.py  test_freshness.py  test_resource.py  test_server.py  test_updates.py
