[project]
name = "agent-memory"
version = "1.0.0"
description = "Agent Memory - MCP Server for long-term memory storage with semantic and keyword search"
readme = "README.md"
authors = [
    { name = "Asaduzzaman Noor", email = "asad.noor.antor@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp>=1.0.0",
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
agent-memory = "agent_memory.server:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
